--- a/src/app/demo/components/pages/employee-reg/employee-reg.component.html
+++ b/src/app/demo/components/pages/employee-reg/employee-reg.component.html
@@ -1,43 +1,151 @@
-<form [formGroup]="employeeRegForm"  class="example_form" (ngSubmit)="onSubmit()">
+<div class="container">
+  <div class="form_section">
+    <form [formGroup]="employeeRegForm"  class="example_form" (ngSubmit)="onSubmit()">
 
-  <mat-form-field>
-        <mat-label>First Name</mat-label>
-        <input matInput placeholder="Enter first Name" formControlName="firstName"/>
+  <mat-form-field class="full_width">
+  <mat-label>First Name</mat-label>
+  <input matInput placeholder="Enter First Name" formControlName="firstName" />
+  <span class="text-danger" *ngIf="(employeeRegForm.get('firstName') && employeeRegForm.get('firstName').touched || submitted) && employeeRegForm.get('firstName').errors && employeeRegForm.get('firstName').errors['required']">
+    Enter your First Name
+  </span>
+</mat-form-field>
+
+  <mat-form-field class="full_width">
+  <mat-label>Last Name</mat-label>
+  <input matInput placeholder="Enter last name" formControlName="lastName" />
+  
+  <span class="text-danger" *ngIf="(employeeRegForm.get('lastName') && employeeRegForm.get('lastName').touched || submitted) && employeeRegForm.get('lastName').errors && employeeRegForm.get('lastName').errors['required']">
+    Enter your Last Name
+  </span>
+
+  <span class="text-danger" *ngIf="(employeeRegForm.get('lastName') && employeeRegForm.get('lastName').touched || submitted) && employeeRegForm.get('lastName').errors && employeeRegForm.get('lastName').errors['minlength']">
+    minimum length for last name is 3 characters
+  </span>
+
+  <span class="text-danger" *ngIf="(employeeRegForm.get('lastName') && employeeRegForm.get('lastName').touched || submitted) && employeeRegForm.get('lastName').errors && employeeRegForm.get('lastName').errors['maxlength']">
+    maximum length for last name is 15 characters only
+  </span>
   </mat-form-field>
 
-  <mat-form-field>
-      <mat-label>Last Name</mat-label>
-      <input matInput placeholder="Enter last Name" formControlName="lastName" />
-  </mat-form-field>
-
-  <mat-form-field>
+  <mat-form-field class="full_width">
     <mat-label>Full Name</mat-label>
     <input matInput placeholder="Enter full Name" formControlName="fullName" />
+    <span class="text-danger" *ngIf="employeeRegForm.get('fullName') && employeeRegForm.get('fullName').touched && employeeRegForm.get('fullName').errors && employeeRegForm.get('fullName').errors['required']">
+    Enter your First Name
+    </span>
   </mat-form-field>
 
-  <mat-form-field>
+  <mat-form-field class="full_width">
     <mat-label>Age</mat-label>
     <input matInput placeholder="Enter age" formControlName="age" />
+    <span class="text-danger" *ngIf="(employeeRegForm.get('age') && employeeRegForm.get('age').touched || submitted) && employeeRegForm.get('age').errors && employeeRegForm.get('age').errors['customAgeValidator']">
+    please enter valid age
+  </span>
+
+  <span class="text-danger" *ngIf="(employeeRegForm.get('age') && employeeRegForm.get('age').touched || submitted) && employeeRegForm.get('age').errors && employeeRegForm.get('age').errors['min']">
+    age must be greater than 18
+  </span>
+
+  <span class="text-danger" *ngIf="(employeeRegForm.get('age') && employeeRegForm.get('age').touched || submitted) && employeeRegForm.get('age').errors && employeeRegForm.get('age').errors['max']">
+    age must be less than 40
+  </span>
   </mat-form-field>
 
-  <mat-form-field>
+  <mat-form-field class="full_width">
     <mat-label>Email</mat-label>
     <input matInput placeholder="Enter email"  formControlName="email"  />
+    <span class="text-danger" *ngIf="(employeeRegForm.get('email') && employeeRegForm.get('email').touched || submitted) && employeeRegForm.get('email').errors && employeeRegForm.get('email').errors['pattern']">
+    please enter valid email
+  </span>
   </mat-form-field>
 
-  <mat-form-field>
+  <mat-form-field class="full_width">
     <mat-label>Phone Number</mat-label>
     <input matInput placeholder="Enter phone Number"  formControlName="phoneNumber" />
+    <span class="text-danger" *ngIf="(employeeRegForm.get('phoneNumber') && employeeRegForm.get('phoneNumber').touched || submitted) && employeeRegForm.get('phoneNumber').errors && employeeRegForm.get('phoneNumber').errors['pattern']">
+    please enter valid phone number
+  </span>
+
+  <span class="text-danger" *ngIf="employeeRegForm.get('phoneNumber') && employeeRegForm.get('phoneNumber').touched && employeeRegForm.get('phoneNumber').errors && employeeRegForm.get('phoneNumber').errors['required']">
+    Enter your phone number
+    </span>
+
   </mat-form-field>
 
-  <mat-form-field>
+  <mat-form-field class="full_width">
     <mat-label>Blood Type</mat-label>
     <input matInput placeholder="Enter Blood Type" formControlName="bloodType"  />
+    <span class="text-danger" *ngIf="employeeRegForm.get('bloodType') && employeeRegForm.get('bloodType').touched && employeeRegForm.get('bloodType').errors && employeeRegForm.get('bloodType').errors['required']">
+    Enter your blood type
+    </span>
   </mat-form-field>
 
-  <button type="submit" mat-raised-button>Submit</button>
+  <button type="submit" mat-raised-button color="primary" class="form_button"  [disabled]="isButtonDisabled">Save</button>
+  <button type="button" mat-raised-button color="secondary" class="form_button" (click)="resetData()">Reset</button>
 
 </form>
+  </div>
 
+  <div class="table_section">
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
+  <ng-container matColumnDef="firstName">
+    <th mat-header-cell *matHeaderCellDef> First Name </th>
+    <td mat-cell *matCellDef="let element"> {{element.firstName}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="lastName">
+    <th mat-header-cell *matHeaderCellDef> Last Name </th>
+    <td mat-cell *matCellDef="let element"> {{element.lastName}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="fullName">
+    <th mat-header-cell *matHeaderCellDef> Full Name </th>
+    <td mat-cell *matCellDef="let element"> {{element.fullName}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="age">
+    <th mat-header-cell *matHeaderCellDef> Age </th>
+    <td mat-cell *matCellDef="let element"> {{element.age}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="email">
+    <th mat-header-cell *matHeaderCellDef> Email </th>
+    <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="phoneNumber">
+    <th mat-header-cell *matHeaderCellDef> Phone Number </th>
+    <td mat-cell *matCellDef="let element"> {{element.phoneNumber}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="bloodType">
+    <th mat-header-cell *matHeaderCellDef> Blood Type </th>
+    <td mat-cell *matCellDef="let element"> {{element.bloodType}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="actions">
+    <th mat-header-cell *matHeaderCellDef>Actions </th>
+    <td mat-cell *matCellDef="let element">
+      <button mat-icon-button color="warn" (click)="editData(element)" matTooltip="edit">
+        <mat-icon>edit</mat-icon>
+      </button>
+      <button mat-icon-button color="Accent" (click)="deleteData(element)" matTooltip="delete">
+        <mat-icon>delete</mat-icon>
+      </button>
+    </td>
+  </ng-container>
+    
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
+
+<mat-paginator [pageSizeOptions]="[5, 10, 20]"
+                 showFirstLastButtons
+                 aria-label="Select page of periodic elements">
+  </mat-paginator>
+
+  </div>
+
+</div>
 
