--- a/src/app/demo/components/pages/stylist-task-management/stylist-task-management.component.html
+++ b/src/app/demo/components/pages/stylist-task-management/stylist-task-management.component.html
@@ -11,20 +11,8 @@
         </span>
       </mat-form-field>
 
-      <mat-form-field class="full-width"appearance="fill">
-        <mat-label>Service Type</mat-label>
-        <mat-select formControlName="serviceType">
-          <mat-option *ngFor="let service of serviceTypes" [value]="service">
-            {{ service }}
-          </mat-option>
-        </mat-select>
-        <span class="text-danger"
-          *ngIf="(stylistTaskManagementForm.get('serviceType')?.touched || submitted) && stylistTaskManagementForm.get('serviceType')?.errors?.['required']">
-          Service Type is required
-        </span>
-      </mat-form-field>
-
-      <!-- <mat-form-field class="full-width">
+      <!-- Service Type -->
+      <mat-form-field class="full-width">
         <mat-label>Service Type</mat-label>
         <mat-select formControlName="serviceType">
           <mat-option value="Haircut">Haircut</mat-option>
@@ -36,10 +24,7 @@
           *ngIf="(stylistTaskManagementForm.get('serviceType')?.touched || submitted) && stylistTaskManagementForm.get('serviceType')?.errors?.['required']">
           Service Type is required
         </span>
-      </mat-form-field> -->
-
-
-
+      </mat-form-field>
 
       <mat-form-field class="full-width">
         <mat-label>Date</mat-label>
@@ -70,20 +55,22 @@
         </span>
       </mat-form-field>
 
+      <!-- task status -->
       <mat-form-field class="full-width">
         <mat-label>Task Status</mat-label>
         <mat-select formControlName="status">
-          <mat-option *ngFor="let service of serviceTypes" [value]="serviceStatus">
-            {{ serviceStatus }}
-          </mat-option>
+          <mat-option value="Started">Started</mat-option>
+          <mat-option value="Ongoing">Ongoing</mat-option>
+          <mat-option value="Finished">Finished</mat-option>
         </mat-select>
         <span class="text-danger"
           *ngIf="(stylistTaskManagementForm.get('status')?.touched || submitted) && stylistTaskManagementForm.get('status')?.errors?.['required']">
-          Service Status is required
+          Task Status is required
         </span>
       </mat-form-field>
 
-      <button type="submit" mat-raised-button color="primary" class="form-button">Save</button>
+      <button type="submit" mat-raised-button color="primary" class="form-button"
+        [disabled]="isButtonDisabled">{{saveButtonLabel}}</button>
       <button type="button" mat-raised-button color="accent" class="form-button" (click)="resetForm()">Reset</button>
 
     </form>
@@ -104,7 +91,7 @@
 
       <ng-container matColumnDef="date">
         <th mat-header-cell *matHeaderCellDef> Date </th>
-        <td mat-cell *matCellDef="let element"> {{element.date | date:'shortDate'}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.date | date: 'yyyy/MM/dd'}} </td>
       </ng-container>
 
       <ng-container matColumnDef="startTime">
