--- a/src/app/demo/components/pages/stylist-task-management/stylist-task-management.component.html
+++ b/src/app/demo/components/pages/stylist-task-management/stylist-task-management.component.html
@@ -53,16 +53,16 @@
         </span>
       </mat-form-field>
 
-      <mat-form-field class="full-width">
-        <mat-label>Task Status</mat-label>
-        <mat-select formControlName="status">
+      <mat-form-field class="full-width"appearance="fill">
+        <mat-label>Service Status</mat-label>
+        <mat-select formControlName="serviceStatus">
           <mat-option *ngFor="let service of serviceTypes" [value]="serviceStatus">
             {{ serviceStatus }}
           </mat-option>
         </mat-select>
         <span class="text-danger"
-          *ngIf="(stylistTaskManagementForm.get('status')?.touched || submitted) && stylistTaskManagementForm.get('status')?.errors?.['required']">
-          Service Status is required
+          *ngIf="(stylistTaskManagementForm.get('serviceStatus')?.touched || submitted) && stylistTaskManagementForm.get('serviceStatus')?.errors?.['required']">
+          Service Type is required
         </span>
       </mat-form-field>
 
@@ -100,9 +100,9 @@
         <td mat-cell *matCellDef="let element"> {{element.endTime}} </td>
       </ng-container>
 
-      <ng-container matColumnDef="status">
+      <ng-container matColumnDef="serviceStatus">
         <th mat-header-cell *matHeaderCellDef>Task Status </th>
-        <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.serviceStatus}} </td>
       </ng-container>
 
       <ng-container matColumnDef="actions">
