--- a/src/app/demo/components/pages/stylist-task-management/stylist-task-management.component.scss
+++ b/src/app/demo/components/pages/stylist-task-management/stylist-task-management.component.scss
@@ -1,26 +1,27 @@
 .container {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    padding: 20px;
-    box-sizing: border-box;
-  }
-  
-  .form-section,
-  .table-section {
-    width: 50%;
-    padding: 20px;
-    box-sizing: border-box;
-  }
-  
-  .form-section {
-    border-right: 1px solid #ccc;
-  }
-  
-  .full-width {
-    width: 100%;
-  }
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  padding: 20px;
+  box-sizing: border-box;
+}
 
-  .form-button{
-    margin-right: 1%;
-  }
+.form-section,
+.table-section {
+  width: 100%;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.form-section {
+  border-bottom: 1px solid #ccc;
+}
+
+.full-width {
+  width: 100%;
+}
+
+.form-button {
+  margin-right: 1%;
+}
