--- a/src/app/demo/components/pages/client-reg/client-reg.component.html
+++ b/src/app/demo/components/pages/client-reg/client-reg.component.html
@@ -32,6 +32,15 @@
   </div>
 
   <div class="table-section">
+
+    <mat-form-field appearance="outline" class="full-width">
+      <mat-label>Search</mat-label>
+      <input matInput (keyup)="applyFilter($event)" placeholder="Type to search clients">
+      <button mat-button *ngIf="searchValue" matSuffix mat-icon-button aria-label="Clear" (click)="clearSearch()">
+        <mat-icon>close</mat-icon>
+      </button>
+    </mat-form-field>
+
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
       <ng-container matColumnDef="firstName">
         <th mat-header-cell *matHeaderCellDef> First Name </th>
@@ -76,3 +85,4 @@
 
   </div>
 </div>
+
