--- a/src/app/demo/components/pages/stylist-task-management/stylist-task-management.component.html
+++ b/src/app/demo/components/pages/stylist-task-management/stylist-task-management.component.html
@@ -1,110 +1,112 @@
 <div class="container">
   <div class="form-section">
-    <form [formGroup]="stylistTaskManagementForm" (ngSubmit)="onSubmit()" class="example-form">
+    <h2 class="form-title">Stylist Task Management Form</h2>
+    <form [formGroup]="stylistTaskManagementForm" (ngSubmit)="onSubmit()">
+      <div class="form-grid">
+        <mat-form-field class="full-width">
+          <mat-label>Stylist Name</mat-label>
+          <input matInput placeholder="Enter Stylist Name" formControlName="stylistName" />
+          <span class="text-danger"
+            *ngIf="stylistTaskManagementForm.get('stylistName') && stylistTaskManagementForm.get('stylistName').touched && stylistTaskManagementForm.get('stylistName').errors && stylistTaskManagementForm.get('stylistName').errors['required']">
+            Enter your First Name
+          </span>
+        </mat-form-field>
+        <mat-form-field class="full-width">
+          <mat-label>Service Type</mat-label>
+          <mat-select formControlName="serviceType">
+            <mat-option value="Haircut">Haircut</mat-option>
+            <mat-option value="Hair Color">Hair Coloring</mat-option>
+            <mat-option value="Hair Straightening">Hair Straightening</mat-option>
+            <mat-option value="Hair Treatment">Hair Treatment</mat-option>
+            <mat-option value="Hair Perm">Hair Perm</mat-option>
+            <mat-option value="Blow-dry">Blow-dry</mat-option>
+            <mat-option value="Scalp treatment">Scalp Treatment</mat-option>
+            <mat-option value="Pedicure">Pedicure</mat-option>
+          </mat-select>
+          <span class="text-danger"
+            *ngIf="stylistTaskManagementForm.get('serviceType') && stylistTaskManagementForm.get('serviceType').touched && stylistTaskManagementForm.get('serviceType').errors && stylistTaskManagementForm.get('serviceType').errors['required']">
+            Service Type is Required
+          </span>
+        </mat-form-field>
+        <mat-form-field class="full-width">
+          <mat-label>Date</mat-label>
+          <input matInput [matDatepicker]="picker" formControlName="date">
+          <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+          <mat-datepicker #picker></mat-datepicker>
+          <span class="text-danger"
+            *ngIf="(stylistTaskManagementForm.get('date')?.touched || submitted) && stylistTaskManagementForm.get('date')?.errors?.['required']">
+            Date is required
+          </span>
+        </mat-form-field>
+        <mat-form-field class="full-width">
+          <mat-label>Start Time</mat-label>
+          <input matInput formControlName="startTime" placeholder="e.g., 10:30 AM" />
+          <span class="text-danger"
+            *ngIf="(stylistTaskManagementForm.get('startTime')?.touched || submitted) && stylistTaskManagementForm.get('startTime')?.errors?.['required']">
+            Start Time is required
+          </span>
+        </mat-form-field>
+        <mat-form-field class="full-width">
+          <mat-label>End Time</mat-label>
+          <input matInput formControlName="endTime" placeholder="e.g., 12:30 PM" />
+          <span class="text-danger"
+            *ngIf="(stylistTaskManagementForm.get('endTime')?.touched || submitted) && stylistTaskManagementForm.get('endTime')?.errors?.['required']">
+            End Time is required
+          </span>
+        </mat-form-field>
 
-      <mat-form-field class="full-width">
-        <mat-label>Stylist Name</mat-label>
-        <input matInput formControlName="stylistName" />
-        <span class="text-danger"
-          *ngIf="(stylistTaskManagementForm.get('stylistName')?.touched || submitted) && stylistTaskManagementForm.get('stylistName')?.errors?.['required']">
-          Stylist Name is required
-        </span>
-      </mat-form-field>
-
-      <mat-form-field class="full-width"appearance="fill">
-        <mat-label>Service Type</mat-label>
-        <mat-select formControlName="serviceType">
-          <mat-option *ngFor="let service of serviceTypes" [value]="service">
-            {{ service }}
-          </mat-option>
-        </mat-select>
-        <span class="text-danger"
-          *ngIf="(stylistTaskManagementForm.get('serviceType')?.touched || submitted) && stylistTaskManagementForm.get('serviceType')?.errors?.['required']">
-          Service Type is required
-        </span>
-      </mat-form-field>
-
-      <mat-form-field class="full-width">
-        <mat-label>Date</mat-label>
-        <input matInput [matDatepicker]="picker" formControlName="date">
-        <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-        <mat-datepicker #picker></mat-datepicker>
-        <span class="text-danger"
-          *ngIf="(stylistTaskManagementForm.get('date')?.touched || submitted) && stylistTaskManagementForm.get('date')?.errors?.['required']">
-          Date is required
-        </span>
-      </mat-form-field>
-
-      <mat-form-field class="full-width">
-        <mat-label>Start Time</mat-label>
-        <input matInput formControlName="startTime" placeholder="e.g., 10:30 AM" />
-        <span class="text-danger"
-          *ngIf="(stylistTaskManagementForm.get('startTime')?.touched || submitted) && stylistTaskManagementForm.get('startTime')?.errors?.['required']">
-          Start Time is required
-        </span>
-      </mat-form-field>
-
-      <mat-form-field class="full-width">
-        <mat-label>End Time</mat-label>
-        <input matInput formControlName="endTime" placeholder="e.g., 12:30 PM" />
-        <span class="text-danger"
-          *ngIf="(stylistTaskManagementForm.get('endTime')?.touched || submitted) && stylistTaskManagementForm.get('endTime')?.errors?.['required']">
-          End Time is required
-        </span>
-      </mat-form-field>
-
-      <mat-form-field class="full-width"appearance="fill">
-        <mat-label>Service Status</mat-label>
-        <mat-select formControlName="serviceStatus">
-          <mat-option *ngFor="let Status of serviceStatus" [value]="serviceStatus">
-            {{ Status }}
-          </mat-option>
-        </mat-select>
-        <span class="text-danger"
-          *ngIf="(stylistTaskManagementForm.get('serviceStatus')?.touched || submitted) && stylistTaskManagementForm.get('serviceStatus')?.errors?.['required']">
-          Service Type is required
-        </span>
-      </mat-form-field>
-
-      <button type="submit" mat-raised-button color="primary" class="form-button">Save</button>
-      <button type="reset" mat-raised-button color="accent" class="form-button" (click)="resetForm()">Reset</button>
-
+      </div>
+      <div class="button-group">
+        <button type="submit" mat-raised-button color="primary" class="form-button" [disabled]="isButtonDisabled">{{
+          saveButtonLabel }}</button>
+        <button type="reset" mat-raised-button color="secondary" class="form-button"
+          (click)="resetData()">Reset</button>
+      </div>
     </form>
   </div>
 
-  <div class="table-section">
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <div class="table-section mt-5">
+    <h2 class="form-title">Stylist Tasks Information</h2>
 
+    <div class="refresh-filter-section">
+      <div class="refresh-button">
+        <button mat-icon-button color="primary" (click)="refreshData()">
+          <mat-icon>refresh</mat-icon>
+        </button>
+      </div>
+      <br>
+
+      <mat-form-field class="filter">
+        <mat-label>Filter</mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Filter" #input>
+      </mat-form-field>
+    </div>
+
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
       <ng-container matColumnDef="stylistName">
         <th mat-header-cell *matHeaderCellDef> Stylist Name </th>
         <td mat-cell *matCellDef="let element"> {{element.stylistName}} </td>
       </ng-container>
-
       <ng-container matColumnDef="serviceType">
         <th mat-header-cell *matHeaderCellDef> Service Type </th>
         <td mat-cell *matCellDef="let element"> {{element.serviceType}} </td>
       </ng-container>
-
       <ng-container matColumnDef="date">
         <th mat-header-cell *matHeaderCellDef> Date </th>
         <td mat-cell *matCellDef="let element"> {{element.date | date:'shortDate'}} </td>
       </ng-container>
-
       <ng-container matColumnDef="startTime">
         <th mat-header-cell *matHeaderCellDef> Start Time </th>
         <td mat-cell *matCellDef="let element"> {{element.startTime}} </td>
       </ng-container>
-
       <ng-container matColumnDef="endTime">
         <th mat-header-cell *matHeaderCellDef> End Time </th>
         <td mat-cell *matCellDef="let element"> {{element.endTime}} </td>
       </ng-container>
-
       <ng-container matColumnDef="serviceStatus">
         <th mat-header-cell *matHeaderCellDef>Task Status </th>
         <td mat-cell *matCellDef="let element"> {{element.serviceStatus}} </td>
       </ng-container>
-
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef>Actions</th>
         <td mat-cell *matCellDef="let element">
@@ -116,11 +118,12 @@
           </button>
         </td>
       </ng-container>
-
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;" [ngClass]="{'highlight-row': selectedRow && selectedRow.id === row.id,
+              'last-added-row': lastAddedRow && lastAddedRow.id === row.id,
+              'last-edited-row': lastEditedRow && lastEditedRow.id === row.id}"></tr>
     </table>
-
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
-  </div>
-</div>
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Select page of periodic elements">
+    </mat-paginator>
+    </div>
+    </div>
